# pyspecai-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
data/metadata/: Handroanthus_from_brahms.xlsx
data/processed/: X_test_wide.csv  X_train_val_wide.csv  y_test.csv  y_train_val.csv
models/inpa_minicourse_v1/: 1_interpolator.pkl
notebooks/: 1_Data_Prep_and_EDA.ipynb
pyspecaitoolkit/: create_dataset.py  preprocessing.py
pyspecaitoolkit/grid_suggestion/: target_grid.py
pyspecaitoolkit/metadata_extractors/: excel_extractor.py  filename_extractor.py
pyspecaitoolkit/parsers/: parser_isc_micronir_nirsg1.py  parser_isc_nirsg1_minicourse_inpa_absorbance.py
pyspecaitoolkit/protocols/: protocols_config.py
raw_data/: INPA0145168_ab_FolHerbario_20250403_110028.csv  INPA0145168_ab_FolHerbario_20250403_110028_r.csv  INPA0145168_ab_FolHerbario_20250403_110107.csv  INPA0145168_ab_FolHerbario_20250403_110128.csv  INPA0145168_ab_FolHerbario_20250403_110157_r.csv  INPA0145168_ab_FolHerbario_20250403_110218.csv  INPA0145168_ab_FolHerbario_20250403_110218_r.csv  INPA0145168_ab_FolHerbario_20250403_110235.csv  INPA0145168_ab_FolHerbario_20250403_110235_r.csv  INPA0145168_ab_FolHerbario_20250403_110301.csv  INPA0145168_ab_FolHerbario_20250403_110301_r.csv  INPA0205825_ab_FolHerbario_20250403_113514.csv  INPA0205825_ab_FolHerbario_20250403_113606.csv  INPA0205825_ab_FolHerbario_20250403_113810.csv  INPA0205825_ab_FolHerbario_20250403_113810_r.csv  INPA0205825_ad_FolHerbario_20250403_113954_r.csv  INPA0205825_ad_FolHerbario_20250403_114023_r.csv  INPA0205825_ad_FolHerbario_20250403_114047.csv  INPA0205827_ab_FolHerbario_20250403_114815.csv  INPA0205827_ab_FolHerbario_20250403_114815_r.csv  INPA0205827_ad_FolHerbario_20250403_114834.csv  INPA0205827_ad_FolHerbario_20250403_114834_r.csv  INPA0205827_ad_FolHerbario_20250403_114856.csv  INPA0205827_ad_FolHerbario_20250403_114856_r.csv  INPA0205827_ad_FolHerbario_20250403_114911.csv  INPA0205827_ad_FolHerbario_20250403_114911_r.csv  INPA0205827_ad_FolHerbario_20250403_114927_r.csv  INPA0205828_ad_FolHerbario_20250403_111746.csv  INPA0205828_ad_FolHerbario_20250403_111820.csv  INPA0205828_ad_FolHerbario_20250403_111820_r.csv  INPA0205828_ad_FolHerbario_20250403_111846.csv  INPA0205828_ad_FolHerbario_20250403_111846_r.csv  INPA0205828_ad_FolHerbario_20250403_111928.csv  INPA0205828_ad_FolHerbario_20250403_112153.csv  INPA0205828_ad_FolHerbario_20250403_112226.csv  INPA0205828_ad_FolHerbario_20250403_112250.csv  INPA0205828_ad_FolHerbario_20250403_112250_r.csv  INPA0205832_ab_FolHerbario_20250403_110837.csv  INPA0205832_ab_FolHerbario_20250403_110914.csv  INPA0205832_ab_FolHerbario_20250403_110914_r.csv  (+505 more)
tests/: test_excel_extractor.py  test_filename_extractor.py  test_parser_isc_micronir_nirsg1.py
(+410 files in other folders)
