# pyproject.toml

# Build system configuration (standard for modern Python packages)
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Diz ao setuptools para procurar pacotes apenas dentro desta lista de pastas
packages = ["pyspecaitoolkit"]

# Project metadata
[project]
name = "pyspecaitoolkit"
version = "0.1.0" # Initial alpha version
authors = [
  { name="MeloLHS-DarthGrogu", email="melostrader@gmail.com" },
]
description = "A Python toolkit for standardized spectroscopic data analysis (NIR focus). Features modular parsers, scikit-learn compatible preprocessing pipelines, ML model training/evaluation, ONNX export for interoperability, and a local inference server for easy model deployment."
readme = "README.md"
requires-python = ">=3.9" # Requires Python 3.9 or newer
license-files = ["LICENSE"] # Assumes your license file is named LICENSE
keywords = ["spectroscopy", "nir", "chemometrics", "machine learning", "botany", "herbarium", "onnx"]
classifiers = [
    "Development Status :: 3 - Alpha", # Indicates it's an early version
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Project dependencies (what 'pip install' needs)
dependencies = [
    "pandas",         # For data manipulation
    "numpy",          # For numerical operations
    "scikit-learn",   # For ML pipelines, models, preprocessing
    "skl2onnx",       # For exporting sklearn models to ONNX
    "onnxruntime",    # For running ONNX models (needed by api/test scripts)
    "fastapi",        # For the local inference API server
    "uvicorn[standard]", # For running the FastAPI server
    "openpyxl",       # Required by pandas to read .xlsx metadata files
    "scipy",          # For potential preprocessing like Savitzky-Golay
    # Add other dependencies as needed, e.g., plotting libraries for notebooks
    # "matplotlib",
    # "jupyterlab",
]


# Optional dependencies (e.g., for development or specific features)
# [project.optional-dependencies]
# dev = ["pytest", "black", "ruff"]

# Entry points for command-line scripts (we will add these later)
# [project.scripts]
# pyspec-create-dataset = "pyspecaitoolkit.create_dataset:main"
# pyspec-train = "pyspecaitoolkit.training:main"
# pyspec-serve = "pyspecaitoolkit.serve:main"